fix: add recommendation overflow

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -98,4 +98,8 @@
       display: inherit;
     }
   }
+
+  .force-hide {
+    display: none !important;
+  }
 }
